Fixed login page on mobile

--- a/app/template/euro2016/css/template.css
+++ b/app/template/euro2016/css/template.css
@@ -222,10 +222,10 @@ input {
     padding: 0.2rem;
 }
 
-input.text {
-    color: #004410;
-    background: #DCFEE4;
-    border: 1px solid #006F20;
+input[type='text'], input[type='password'] {
+    color: #232a44;
+    background-color: #fff;
+    border: 1px solid #2b476f;
     font-size: 1rem;
     font-weight: normal;
     padding: 0.2rem;
@@ -233,8 +233,9 @@ input.text {
 }
 
 input[type='number'] {
-    color: #004410;
-    border: 1px solid #006F20;
+    color: #232a44;
+    background-color: #fff;
+    border: 1px solid #2b476f;
     font-size: 0.8rem;
     font-weight: normal;
     padding: 0.2rem;
@@ -243,7 +244,7 @@ input[type='number'] {
 }
 
 input[type='submit'] {
-    background-color: #A4D153;
+    background-color: #2b476f;
     border: none;
     border-radius: 0.5rem;
     box-shadow: 2px 2px 2px #ccc;
@@ -899,7 +900,7 @@ span.user_visual {
 }
 
 @media (max-width: 700px) {
-    header {
+    header .block:not(:first-child) {
         display: none;
     }
 
